--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@ layout: base
 <div class="container">
   <div class="row">
     <h2>Writing for change?</h2>
-    <p>We made Purl to help folks learn some technical skills in the service of creating an open course. You'll use Jekyll, GitHub pages and Markdown, and at the same time tap the theories of social learning we use at P2PU. Put your stitch in the open web and get started. </p>
+    <p>A course where you'll team up with folks from P2PU and College Unbound ecosystem to identify your social problem, evaluate funding partners, draft your grant proposal, learn from others doing similarly-minded projects, and gain support within the social entrepreneurship community. Affinity groups (within Discourse, like so http://thepeople.p2pu.org/categories) will be formed around subjects/social problems. Ideas:</p>
+    <ul>
+      <li>Animals</li>
+      <li>Bullying + Violence</li>
+      <li>Disasters</li>
+      <li>Discrimination</li>
+      <li>Education</li>
+      <li>Environment</li>
+      <li>Health</li>
+      <li>Homelessness + Poverty</li>
+      <li>Sex + Relationships </li>
+    <ul>
   </div>
 </div>
