--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@ layout: base
 ---
 <!-- Banner -->
 <section id="banner">
+	<div class="splash"></div>
 	<div class="inner">
 
 		<header>
 			<h2>{{ site.data.course.title }}</h2>
 		</header>
 		<p>A tool to create an open learning course<br />
-		   together with <a href="http://p2pu.org">P2PU</a>.</p>
+		   together with <a target="_blank" href="http://p2pu.org">P2PU</a>.</p>
 	</div>
 </section>
 <div class="container">
