making minor styling changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: base
 		<div id="promo-til"></div>
 		<section id="promo">
 			<h2>The more the merrier</h2>
-			<a href="http://community.p2pu.org" class="btn btn-default">
+			<a target="_blank" href="http://community.p2pu.org" class="btn btn-default">
 				Join the conversation
 			</a>
 		</section>
