made it a bit more mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: base
 					http://thepeople.p2pu.org/categories) will be formed around subjects/social problems.
 				</p>
 			</div>
-			<div class="col-md-4 text-center">
+			<div class="col-md-4 text-center hidden-xs hidden-sm">
 				<img src="{{ site.baseurl }}/img/course-icon.png" alt="Course Icon" />
 			</div>
 		</div>
@@ -35,7 +35,7 @@ layout: base
 	<div id="promo-wrapper">
 		<div id="promo-til"></div>
 		<section id="promo">
-			<h2>The more the merrier</h2>
+			<h2 class="hidden-xs">The more the merrier</h2>
 			<a target="_blank" href="http://community.p2pu.org" class="btn btn-default">
 				Join the conversation
 			</a>
@@ -61,7 +61,7 @@ layout: base
 						<li>Sex + Relationships</li>
 					</ul>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 hidden-xs">
 					<img src="{{ site.baseurl }}/img/idea_bulb.gif" alt="Idea Light Bulb Changing colors" />
 				</div>
 			</div>
