--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ layout: base
 		<header>
 			<h2>{{ site.data.course.title }}</h2>
 		</header>
-		<p>A tool to create an open learning course<br />
-		   together with <a target="_blank" href="http://p2pu.org">P2PU</a>.</p>
+		<p>A free course to help you enact social change<br />
+		   together with <a target="_blank" href="http://collegeunbound.org/">P2PU</a> and <a target="_blank" href="http://p2pu.org">P2PU</a>.</p>
 	</div>
 </section>
 <div class="index-main-content">
