--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@ layout: base
 <div class="index-main-content">
 	<div class="container">
 		<div class="row">
-			<h2>Writing for change?</h2>
+			<h2>The 411</h2>
 
 			<div class="col-md-8">
-				<p>
-					A course where you'll team up with folks from P2PU and College Unbound ecosystem to
-					identify your social problem, evaluate funding partners, draft your grant proposal, learn
-					from others doing similarly-minded projects, and gain support within the social
-					entrepreneurship community. Affinity groups (within Discourse, like so
-					http://thepeople.p2pu.org/categories) will be formed around subjects/social problems.
-				</p>
+				<p>The goal of the course is to help you accomplish social change through op-eds, grants, applications and proposals. This course is for anyone who needs to write in order to accomplish social good in their communities. If you’re familiar with organizations like <a href="http://www.publicallies.org/site/c.liKUL3PNLvF/b.5106423/k.BD7E/Home.htm">Public Allies</a>, the <a href="http://nyc.socialinnovation.org/">Centre for Social Innovation</a>, <a href="https://www.summersearch.org/">Summer Search</a> or the <a href="https://wikimedia.org.uk/wiki/Open_Coalition">Open Coalition</a>--non-profits or social enterprises that have a passion to change the world--then this is your crew.
+
+At the end of the course, you’ll have <b>a finished project that’s been polished by a crew of like-minded folks.</b> Featured writers include <a href="http://mirkwork.wordpress.com/">Sarah Mirk</a> of Bitch Media, <a href="http://annenberg.usc.edu/Faculty/Doctoral%20Students/Agloro_Alexandrina.aspx">Alexandrina Agloro</a> of the University of Southern California and more. 
+			</p>
 			</div>
 			<div class="col-md-4 text-center hidden-xs hidden-sm">
 				<img src="{{ site.baseurl }}/img/course-icon.png" alt="Course Icon" />
