--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@ layout: base
 
 			<div class="col-md-8">
 				<p>The goal of the course is to help you accomplish social change through op-eds, grants, applications and proposals. This course is for anyone who needs to write in order to accomplish social good in their communities. If you’re familiar with organizations like <a href="http://www.publicallies.org/site/c.liKUL3PNLvF/b.5106423/k.BD7E/Home.htm">Public Allies</a>, the <a href="http://nyc.socialinnovation.org/">Centre for Social Innovation</a>, <a href="https://www.summersearch.org/">Summer Search</a> or the <a href="https://wikimedia.org.uk/wiki/Open_Coalition">Open Coalition</a>--non-profits or social enterprises that have a passion to change the world--then this is your crew.
+</p>
+<p>As we said, the goal is to bring about social change in an area that is personally important to you. Each week will have a reading piece and a writing piece. We’ll start with your personal biography and establish why you care about this issue. </p>
 
-At the end of the course, you’ll have <b>a finished project that’s been polished by a crew of like-minded folks.</b> Featured writers include <a href="http://mirkwork.wordpress.com/">Sarah Mirk</a> of Bitch Media, <a href="http://annenberg.usc.edu/Faculty/Doctoral%20Students/Agloro_Alexandrina.aspx">Alexandrina Agloro</a> of the University of Southern California and more. 
+<p>The P2PU social learning design will be an integral part of the course. Initially you’ll come together via the <a href="http://discourse.p2pu.org/category/writing-for-change">Discourse</a> community around the issue you are passionate about, then later you’ll work with folks who have a similar project to you. </p>
+
+<p>
+At the end of the course, you’ll have <i>a finished project that’s been polished by a crew of like-minded folks.</i> Featured writers include <a href="http://mirkwork.wordpress.com/">Sarah Mirk</a> of Bitch Media, <a href="http://annenberg.usc.edu/Faculty/Doctoral%20Students/Agloro_Alexandrina.aspx">Alexandrina Agloro</a> of the University of Southern California and more. 
 			</p>
 			</div>
 			<div class="col-md-4 text-center hidden-xs hidden-sm">
@@ -32,9 +37,9 @@ At the end of the course, you’ll have <b>a finished project that’s been poli
 	<div id="promo-wrapper">
 		<div id="promo-til"></div>
 		<section id="promo">
-			<h2 class="hidden-xs">The more the merrier</h2>
-			<a target="_blank" href="http://community.p2pu.org" class="btn btn-default">
-				Join the conversation
+			<h2 class="hidden-xs">We're a friendly crew.</h2>
+			<a target="_blank" href="http://discourse.p2pu.org/category/writing-for-change" class="btn btn-default">
+				Get started and say hi.
 			</a>
 		</section>
 
@@ -43,20 +48,11 @@ At the end of the course, you’ll have <b>a finished project that’s been poli
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>Ideas:</h2>
+				<h2>Our "Street Cred":</h2>
 
-				<div class="col-md-6">
-					<ul>
-						<li>Animals</li>
-						<li>Bullying + Violence</li>
-						<li>Disasters</li>
-						<li>Discrimination</li>
-						<li>Education</li>
-						<li>Environment</li>
-						<li>Health</li>
-						<li>Homelessness + Poverty</li>
-						<li>Sex + Relationships</li>
-					</ul>
+		<p>College Unbound's goal is to support adult learners as college students in a project-based program that is relevant to their lives. Marginalized and underserved student populations earn an accredited degree via civic engagement projects and real-life experience. Students--among them previously incarcerated, single-moms and other marginalized peoples--earn an accredited degree via civic engagement projects and real-life experience. </p>
+		
+		<p>P2PU is a university for the web, built by an open community. Instead of lonely, anonymous online courses, our communities sustain interest and engagement because folks build them together. We are open and welcoming in everything we do, and help folks generally feel comfy on the internet. Our core values are openness, community and peer learning, and we've built learning communities with the likes of Creative Commons, Mozilla, NYU and MIT.</p>
 				</div>
 				<div class="col-md-4 hidden-xs">
 					<img src="{{ site.baseurl }}/img/idea_bulb.gif" alt="Idea Light Bulb Changing colors" />
