--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ At the end of the course, you’ll have <i>a finished project that’s been poli
 			<div class="col-md-12">
 				<h2>Our "Street Cred":</h2>
 
-		<p>College Unbound's goal is to support adult learners as college students in a project-based program that is relevant to their lives. Marginalized and underserved student populations earn an accredited degree via civic engagement projects and real-life experience. Students--among them previously incarcerated, single-moms and other marginalized peoples--earn an accredited degree via civic engagement projects and real-life experience. </p>
+		<p><a href"http://collegeunbound.org/">College Unbound</a>'s goal is to support adult learners as college students in a project-based program that is relevant to their lives. Marginalized and underserved student populations earn an accredited degree via civic engagement projects and real-life experience. Students--among them previously incarcerated, single-moms and other marginalized peoples--earn an accredited degree via civic engagement projects and real-life experience. </p>
 		
-		<p>P2PU is a university for the web, built by an open community. Instead of lonely, anonymous online courses, our communities sustain interest and engagement because folks build them together. We are open and welcoming in everything we do, and help folks generally feel comfy on the internet. Our core values are openness, community and peer learning, and we've built learning communities with the likes of Creative Commons, Mozilla, NYU and MIT.</p>
+		<p><a href"https://p2pu.org/en/">P2PU</a> is a university for the web, built by an open community. Instead of lonely, anonymous online courses, our communities sustain interest and engagement because folks build them together. We are open and welcoming in everything we do, and help folks generally feel comfy on the internet. Our core values are openness, community and peer learning, and we've built learning communities with the likes of Creative Commons, Mozilla, NYU and MIT.</p>
 				</div>
 				<div class="col-md-4 hidden-xs">
 					
