working on landing page design and UX

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: base
 <p>The P2PU social learning design will be an integral part of the course. Initially you’ll come together via the <a href="http://discourse.p2pu.org/category/writing-for-change">Discourse</a> community around the issue you are passionate about, then later you’ll work with folks who have a similar project to you. </p>
 
 <p>
-At the end of the course, you’ll have <i>a finished project that’s been polished by a crew of like-minded folks.</i> Featured writers include <a href="http://mirkwork.wordpress.com/">Sarah Mirk</a> of Bitch Media, <a href="http://annenberg.usc.edu/Faculty/Doctoral%20Students/Agloro_Alexandrina.aspx">Alexandrina Agloro</a> of the University of Southern California and more. 
+At the end of the course, you’ll have <i>a finished project that’s been polished by a crew of like-minded folks.</i> Featured writers include <a href="http://mirkwork.wordpress.com/">Sarah Mirk</a> of Bitch Media, <a href="http://annenberg.usc.edu/Faculty/Doctoral%20Students/Agloro_Alexandrina.aspx">Alexandrina Agloro</a> of the University of Southern California and more.
 			</p>
 			</div>
 			<div class="col-md-4 text-center hidden-xs hidden-sm">
@@ -34,28 +34,72 @@ At the end of the course, you’ll have <i>a finished project that’s been poli
 			</div>
 		</div>
 	</div>
+	<div class="badges-wrapper">
+		<div class="container">
+			<h2>There are Badges to be Given</h2>
+			<p>
+				You can even get a recognition for your achievments.
+			</p>
+			<ul class="thumbnails clearfix first">
+				<li class="thumbnail col-md-4 first">
+					<a class="course-badge" href="http://badges.p2pu.org/en/badge/view/542/">
+						<img src="{{ 'img/Badges/writing4change-communication.png' | prepend: site.baseurl}}"
+						     alt="Badge of Communication" />
+					</a>
+				</li>
+				<li class="thumbnail col-md-4">
+					<a class="course-badge" href="http://badges.p2pu.org/en/badge/view/541/">
+						<img src="{{ 'img/Badges/writing4change-collaboration.png' | prepend: site.baseurl}}"
+						     alt="Badge of Collaboration" />
+					</a>
+				</li>
+				<li class="thumbnail col-md-4">
+					<a class="course-badge" href="http://badges.p2pu.org/en/badge/view/540/">
+						<img src="{{ 'img/Badges/writing4change-advocacy.png' | prepend: site.baseurl}}"
+						     alt="Badge of Advocacy" />
+					</a>
+				</li>
+			</ul>
+			</div>
+	</div>
 	<div id="promo-wrapper">
 		<div id="promo-til"></div>
 		<section id="promo">
 			<h2 class="hidden-xs">We're a friendly crew.</h2>
-			<a target="_blank" href="http://discourse.p2pu.org/category/writing-for-change" class="btn btn-default">
-				Get started and say hi.
+			<a target="_blank" href="http://discourse.p2pu.org/category/writing-for-change" class="btn
+			btn-info btn-lg">
+				Get Started and Say Hi.
 			</a>
 		</section>
 
 	</div>
 
-	<div class="container">
+
+	<div class="container collaborators">
 		<div class="row">
 			<div class="col-md-12">
 				<h2>Our "Street Cred":</h2>
-
-		<p><a href"http://collegeunbound.org/">College Unbound</a>'s goal is to support adult learners as college students in a project-based program that is relevant to their lives. Marginalized and underserved student populations earn an accredited degree via civic engagement projects and real-life experience. Students--among them previously incarcerated, single-moms and other marginalized peoples--earn an accredited degree via civic engagement projects and real-life experience. </p>
-		
-		<p><a href"https://p2pu.org/en/">P2PU</a> is a university for the web, built by an open community. Instead of lonely, anonymous online courses, our communities sustain interest and engagement because folks build them together. We are open and welcoming in everything we do, and help folks generally feel comfy on the internet. Our core values are openness, community and peer learning, and we've built learning communities with the likes of Creative Commons, Mozilla, NYU and MIT.</p>
+				<div class="col-md-6 first">
+					<p>
+						<img src="{{ "/img/cu-logo.png" | prepend: site.url }}" alt="College Unbound Logo" />
+					</p>
+				<p>
+					<a href=http://collegeunbound.org/">College Unbound</a>
+					's goal is to support adult learners as college students in a project-based program
+					that is relevant to their lives. Marginalized and underserved student populations earn an accredited degree via civic engagement projects and real-life experience. Students--among them previously incarcerated, single-moms and other marginalized peoples--earn an accredited degree via civic engagement projects and real-life experience. </p>
+				</div>
+				<div class="col-md-6">
+					<p>
+						<img src="{{ "/img/logo.png" | prepend: site.url }}" alt="College Unbound Logo" />
+					</p>
+				<p>
+					<a href="https://p2pu.org/en/">P2PU</a>
+					is a university for the web, built by an open community. Instead of lonely,
+					anonymous online courses, our communities sustain interest and engagement because folks build them together. We are open and welcoming in everything we do, and help folks generally feel comfy on the internet. Our core values are openness, community and peer learning, and we've built learning communities with the likes of Creative Commons, Mozilla, NYU and MIT.</p>
+				</div>
 				</div>
 				<div class="col-md-4 hidden-xs">
-					
+
 				</div>
 			</div>
 		</div>
