--- a/signup/success/index.html
+++ b/signup/success/index.html
@@ -5,7 +5,12 @@ layout: base
 <div class="index-main-content">
 	<div class="container">
 		<div class="row">
-			<h2>Signed up!!</h2>
+			<h2>Signed up-huzzah!!</h2>
+			<h2>Next steps: 
+			<ul>
+			<li>complete<a href="https://www.surveymonkey.com/s/Writing4Change_User"> the pre-course survey.</a> </h2></li>
+			<li>head on over to <a hreef="http://discourse.p2pu.org/category/writing-for-change">Discourse</a>, say hello and find a crew.</li>
+			</ul>
 			<div class="col-md-12">
 			</div>
 		</div>
