--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ At the end of the course, you’ll have <i>a finished project that’s been poli
 	</div>
 	<div class="badges-wrapper">
 		<div class="container">
-			<h2>There are Badges to be Given</h2>
+			<h2>Badges Available for Writing For Change</h2>
 			<p>
-				You can even get a recognition for your achievments.
+				You can apply for the following badges in the course, with feedback from Adam Bush of College Unbound.
 			</p>
 			<ul class="thumbnails clearfix first">
 				<li class="thumbnail col-md-4 first">
