Remove double heading for signup

--- a/signup/index.html
+++ b/signup/index.html
@@ -4,8 +4,8 @@ layout: base
 <div class="index-main-content">
 	<div class="container">
 		<div class="row">
-			<h2>Sign up</h2>
 			<div class="col-md-12">
+        <h2>Signup is Open Now: We Start August 15!</h2>
         {% include signup.html %}
 			</div>
 		</div>
