--- a/signup/success/index.html
+++ b/signup/success/index.html
@@ -6,10 +6,10 @@ layout: base
 	<div class="container">
 		<div class="row">
 			<h2>Signed up-huzzah!!</h2>
-			<h2>Next steps: 
+			<h2>Next steps:</h2>
 			<ul>
-			<li>complete<a href="https://www.surveymonkey.com/s/Writing4Change_User"> the pre-course survey.</a> </h2></li>
-			<li>head on over to <a hreef="http://discourse.p2pu.org/category/writing-for-change">Discourse</a>, say hello and find a crew.</li>
+			<li>complete<a href="https://www.surveymonkey.com/s/Writing4Change_User"> the pre-course survey.</a></li>
+			<li>head over to <a hreef="http://discourse.p2pu.org/category/writing-for-change">Discourse</a>, say hello and find a crew.</li>
 			</ul>
 			<div class="col-md-12">
 			</div>
