--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ At the end of the course, you’ll have <i>a finished project that’s been poli
 				<h2>Our "Street Cred":</h2>
 				<div class="col-md-6 first">
 					<p>
-						<img src="{{ "/img/cu-logo.png" | prepend: site.url }}" alt="College Unbound Logo" />
+						<img src="{{site.baseurl}}/img/cu-logo.png" alt="College Unbound Logo" />
 					</p>
 				<p>
 					<a href=http://collegeunbound.org/">College Unbound</a>
@@ -90,7 +90,7 @@ At the end of the course, you’ll have <i>a finished project that’s been poli
 				</div>
 				<div class="col-md-6">
 					<p>
-						<img src="{{ "/img/logo.png" | prepend: site.url }}" alt="College Unbound Logo" />
+						<img src="{{site.baseurl}}/img/logo.png" alt="College Unbound Logo" />
 					</p>
 				<p>
 					<a href="https://p2pu.org/en/">P2PU</a>
