--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ layout: base
 		</header>
 		<p>A free course to help you enact social change<br />
 		   together with <a target="_blank" href="http://collegeunbound.org/">College Unbound</a> and <a target="_blank" href="http://p2pu.org">P2PU</a>.</p>
+		   <p>Open for signup now, starts August 15</p>
 	</div>
 </section>
 <div class="index-main-content">
@@ -84,7 +85,7 @@ At the end of the course, you’ll have <i>a finished project that’s been poli
 						<img src="{{site.baseurl}}/img/cu-logo.png" alt="College Unbound Logo" />
 					</p>
 				<p>
-					<a href=http://collegeunbound.org/">College Unbound</a>
+					<a href="http://collegeunbound.org/">College Unbound</a>
 					's goal is to support adult learners as college students in a project-based program
 					that is relevant to their lives. Marginalized and underserved student populations earn an accredited degree via civic engagement projects and real-life experience. Students--among them previously incarcerated, single-moms and other marginalized peoples--earn an accredited degree via civic engagement projects and real-life experience. </p>
 				</div>
