--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: base
 			<h2>{{ site.data.course.title }}</h2>
 		</header>
 		<p>A free course to help you enact social change<br />
-		   together with <a target="_blank" href="http://collegeunbound.org/">College Unbound</a> and <a target="_blank" href="http://p2pu.org">P2PU</a>.</p>
+		   together with <a target="_blank" href="http://collegeunbound.org/">College Unbound</a> and <a target="_blank" href="http://p2pu.org">P2PU</a>.</p><br />
 		   <p>Open for signup now, starts August 15</p>
 	</div>
 </section>
