--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ layout: base
 			<h2>The 411</h2>
 
 			<div class="col-md-8">
-				<p>The goal of the course is to help you accomplish social change through op-eds, grants, applications and proposals. This course is for anyone who needs to write in order to accomplish social good in their communities. If you’re familiar with organizations like <a href="http://www.publicallies.org/site/c.liKUL3PNLvF/b.5106423/k.BD7E/Home.htm">Public Allies</a>, the <a href="http://nyc.socialinnovation.org/">Centre for Social Innovation</a>, <a href="https://www.summersearch.org/">Summer Search</a> or the <a href="https://wikimedia.org.uk/wiki/Open_Coalition">Open Coalition</a>--non-profits or social enterprises that have a passion to change the world--then this is your crew.
-</p>
-<p>As we said, the goal is to bring about social change in an area that is personally important to you. Each week will have a reading piece and a writing piece. We’ll start with your personal biography and establish why you care about this issue. </p>
-
-<p>The P2PU social learning design will be an integral part of the course. Initially you’ll come together via the <a href="http://discourse.p2pu.org/category/writing-for-change">Discourse</a> community around the issue you are passionate about, then later you’ll work with folks who have a similar project to you. </p>
-
-<p>
-At the end of the course, you’ll have <i>a finished project that’s been polished by a crew of like-minded folks.</i> Featured writers include <a href="http://mirkwork.wordpress.com/">Sarah Mirk</a> of Bitch Media, <a href="http://annenberg.usc.edu/Faculty/Doctoral%20Students/Agloro_Alexandrina.aspx">Alexandrina Agloro</a> of the University of Southern California and more.
+				<p>
+				<ol>
+				<li>The goal of the course is to help you accomplish social change through op-eds, grants, applications and proposals in an area that is *personally important to you*.</li>
+				<li>Each week will have a reading piece and a writing piece. We’ll start with your personal biography and establish why you care about this issue.</li>
+				<li>You'll find your crew on the <a href="http://discourse.p2pu.org/category/writing-for-change">Discourse</a> community who are also passionate about similar issues.</li>
+				<li>At the end of the course, you’ll have <i>a finished project that’s been polished by a crew of like-minded folks.</li>
+				<li>Featured writers include <a href="http://mirkwork.wordpress.com/">Sarah Mirk</a> of Bitch Media, <a href="http://annenberg.usc.edu/Faculty/Doctoral%20Students/Agloro_Alexandrina.aspx">Alexandrina Agloro</a> of the University of Southern California and more.
+				</ol>
 			</p>
 			</div>
 			<div class="col-md-4 text-center hidden-xs hidden-sm">
