--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: base
 			<div class="col-md-8">
 				<p>
 				<ul>
-				<li>The goal of the course is to help you accomplish social change through op-eds, grants, applications and proposals in an area that is *personally important to you*.</li>
+				<li>The goal of the course is to help you accomplish social change through op-eds, grants, applications and proposals in an area that is <i>personally important to you</i>.</li>
 				<li>Each week will have a reading piece and a writing piece. We’ll start with your personal biography and establish why you care about this issue.</li>
 				<li>You'll find your crew on the <a href="http://discourse.p2pu.org/category/writing-for-change">Discourse</a> community who are also passionate about similar issues.</li>
 				<li>At the end of the course, you’ll have <i>a finished project that’s been polished by a crew of like-minded folks</i>.</li>
