Add signup button to front page banner

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ layout: base
 		</header>
 		<p>A free course to help you enact social change<br />
 		   together with <a target="_blank" href="http://collegeunbound.org/">College Unbound</a> and <a target="_blank" href="http://p2pu.org">P2PU</a>.</p><br />
-		   <p>Open for signup now, starts August 15</p>
+		<p>Open for signup now, starts August 15</p>
+    <p><a class="btn btn-large w4c-btn-signup" href="{{site.baseurl}}/signup/">Sign up</a></p>
 	</div>
 </section>
 <div class="index-main-content">
