--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ layout: base
 			<div class="col-md-8">
 				<p>
 				<ul>
-				<li>If you need help writing grant proposals, applications and op-eds, this 8-week course will help you craft a proposal that's been critiqued by fellow change-makers. </li>
-				<li>Each week will have a reading piece and a writing piece. We’ll start with your personal biography and establish why you care about this issue.</li>
+				<li>If you need help writing <b>grant proposals, applications and op-eds</b>, in this 8-week course you will craft a polished, complete piece. </li>
+				<li>Each module will have a reading portion and a writing portion. We’ll start with your personal biography and establish why you care about this issue.</li>
 				<li>You'll find your crew on the <a href="http://discourse.p2pu.org/category/writing-for-change">Discourse</a> community who are also passionate about similar issues.</li>
 				<li>Featured writers include <a href="http://mirkwork.wordpress.com/">Sarah Mirk</a> of Bitch Media, <a href="http://annenberg.usc.edu/Faculty/Doctoral%20Students/Agloro_Alexandrina.aspx">Alexandrina Agloro</a> of the University of Southern California and more.
 				</ul>
