--- a/signup/success/index.html
+++ b/signup/success/index.html
@@ -9,7 +9,7 @@ layout: base
 			<h2>Next steps:</h2>
 			<ul>
 			<li>complete<a href="https://www.surveymonkey.com/s/Writing4Change_User"> the pre-course survey.</a></li>
-			<li>head over to <a hreef="http://discourse.p2pu.org/category/writing-for-change">Discourse</a>, say hello and find a crew.</li>
+			<li>head over to <a href="http://discourse.p2pu.org/category/writing-for-change">Discourse</a>, say hello and find a crew.</li>
 			</ul>
 			<div class="col-md-12">
 			</div>
