--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: index
 <!-- Banner -->
 <section id="banner">
 	<div class="container">
-		<div class="inner col-md-12">
+		<div class="inner col-md-7">
 			<header>
 				<h1>Get help writing grant proposals,<br /> applications and op-eds</h1>
 				<br />
@@ -17,7 +17,9 @@ layout: index
 				<div class="header-intro"><h2>Writing for change</h2></div>
 			</header>
 		</div>
-		<!--div class="col-md-4">
+		<div class="inner col-md-4 col-md-offset-1">
+			<i class="fa fa-book" style="font-size: 23em;"></i>
+			{% comment %}
 			<div class="signup-form">
 				<h3>Signup is Open Now:</h3>
 
@@ -27,7 +29,8 @@ layout: index
 				</small>
 				{% include signup.html %}
 			</div>
-		</div-->
+			{% endcomment %}
+		</div>
 	</div>
 </section>
 <div class="index-main-content">
