--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: index
 	<div class="container">
 		<div class="row">
 			<div class="col-md-10">
-				<h2>The 411</h2>
+				<h2>The Rundown</h2>
 
 				<p>
 				<ul>
@@ -63,11 +63,7 @@ layout: index
 						<div class="col-md-3">
 							<i class="fa fa-users fa-5x"></i>
 						</div>
-						<div class="col-md-9">
-							You'll find your crew on the <a
-								href="http://discourse.p2pu.org/category/writing-for-change">Discourse</a> community
-							who are also passionate about similar issues.
-						</div>
+				
 					</li>
 					<li class="clearfix">
 						<div class="col-md-3">
@@ -86,28 +82,11 @@ layout: index
 			</div>
 		</div>
 	</div>
-	<div class="badges-wrapper">
-		<div class="container">
-			<div class="col-md-8 first">
-
-				<h1>Badges Available for Writing For Change</h1>
-
-				<p>
-					You can apply for the following badges in the course, with feedback from Adam Bush of
-					College Unbound.
-				</p>
-			</div>
-			<div class="col-md-4">
-				<a href="http://badges.p2pu.org/en/badge/view/541/" target="_blank">
-				<img src="{{ "img/badges-writing4change.png" | prepend: site.baseurl }}"
-				     alt="Badges for the course" /></a>
-			</div>
-		</div>
-	</div>
+	
 	<div class="container collaborators">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>Our "Street Cred":</h2>
+				<h2>Who We Are:</h2>
 
 				<div class="col-md-6 first">
 					<p>
